// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Arrange default should render a arrange component with given fit and fill 1`] = `
<span
  className="arrange"
>
  <span
    className="fit fit-block"
  >
    <img
      alt="panda"
      src="http:///uploads/2016/09/telegraph-1.jpg"
    />
  </span>
  <span
    className="fill fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit"
  >
    <a
      href="http://www.example.com"
    />
  </span>
</span>
`;

exports[`Arrange should have align prop undefined when align not pass 1`] = `
<span
  className="arrange"
>
  <span
    className="fit fit-block"
  >
    <img
      alt="panda"
      src="http:///uploads/2016/09/telegraph-1.jpg"
    />
  </span>
  <span
    className="fill fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit"
  />
</span>
`;

exports[`Arrange should have all prop set correctly 1`] = `
<span
  className="arrange"
>
  <span
    className="fit center fit-block"
    style={
      {
        "maxWidth": "10px",
      }
    }
  >
    <img
      alt="panda"
      src="http:///uploads/2016/09/telegraph-1.jpg"
    />
  </span>
  <span
    className="fill center fill-block"
    style={
      {
        "maxWidth": "20px",
      }
    }
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit center"
    style={
      {
        "maxWidth": "30px",
      }
    }
  >
    <a
      href="http://www.example.com"
    />
  </span>
</span>
`;

exports[`Arrange should render a arrange component with given className and id 1`] = `
<span
  className="arrange testA testB testC"
  id="testkey"
>
  <span
    className="fit fit-block"
  >
    <img
      alt="panda"
      src="http:///uploads/2016/09/telegraph-1.jpg"
    />
  </span>
  <span
    className="fill fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit"
  />
</span>
`;

exports[`Arrange when two fits and one fill is passed with align set should render a arrange component with fit and fill aligned to bottom 1`] = `
<span
  className="arrange"
>
  <span
    className="fit bottom fit-block"
  >
    <img
      alt="panda"
      src="http:///uploads/2016/09/telegraph-1.jpg"
    />
  </span>
  <span
    className="fill bottom fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit bottom"
  />
</span>
`;

exports[`Arrange when two fits and one fill is passed with align set should render a arrange component with fit and fill aligned to center 1`] = `
<span
  className="arrange"
>
  <span
    className="fit center fit-block"
  />
  <span
    className="fill center fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit center"
  >
    <a
      href="http://www.example.com"
    />
  </span>
</span>
`;

exports[`Arrange when two fits and one fill is passed with align set should render a arrange component with fit and fill aligned to stretch 1`] = `
<span
  className="arrange"
>
  <span
    className="fit stretch fit-block"
  >
    <img
      alt="panda"
      src="http:///uploads/2016/09/telegraph-1.jpg"
    />
  </span>
  <span
    className="fill stretch fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit stretch"
  />
</span>
`;

exports[`Arrange when two fits and one fill is passed with align set should render a arrange component with fit and fill aligned to top 1`] = `
<span
  className="arrange"
>
  <span
    className="fit fit-block"
  />
  <span
    className="fill fill-block"
  >
    <div>
      FIll text
    </div>
  </span>
  <span
    className="fit"
  >
    <a
      href="http://www.example.com"
    />
  </span>
</span>
`;
